--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,12 @@
             <artifactId>rest-assured</artifactId>
             <version>5.3.0</version>
         </dependency>
-
-
+        <!-- https://mvnrepository.com/artifact/org.aeonbits.owner/owner -->
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+            <version>1.0.12</version>
+        </dependency>
     </dependencies>
 
 </project>
