--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>owner</artifactId>
             <version>1.0.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v104</artifactId>
+            <version>4.5.3</version>
+        </dependency>
     </dependencies>
-
 </project>
