--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,11 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-model</artifactId>
             <version>2.21.0</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.21.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -129,6 +133,13 @@
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
